--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -1,8 +1,9 @@
-name: ci
+name: push-docker-images
 on:
   push:
     branches:
-      - 'main'
+      - 'master'
+      - 'change-docker-workflow'
 
 jobs:
   docker:
@@ -19,23 +20,24 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+        name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ vars.IAM_ROLE_ARN }}
+          role-session-name: survey_tracker_api_deploy_${{ github.job }}
+
+      - 
+        name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
       - 
         name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ matrix.image }}
-      -
-        name: Debug - List files opensign
-        run: ls -R apps/OpenSign/  # Adjust the path as needed
-      -
-        name: Debug - List files opensignserver
-        run: ls -R apps/OpenSignServer/  # Adjust the path as needed  
+          images: ${{ steps.login-ecr.outputs.registry }}/${{ matrix.image }}
       -
         name: Build and push
         uses: docker/build-push-action@v4
